This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-10-27:

- Fixed a bug that crashed the shell upon attempting to replace the shell
  with another command using 'exec' after unsetting the SHLVL variable.
  Bug introduced on 2021-05-18.

2024-10-23:

- Fixed a bug in multidimensional indexed array assignments where unquoted
  values that corresponded to reserved words (such as 'if' or 'select')
  incorrectly caused a syntax error. For example,
    my_array=((somevalue) select) && typeset -p my_array
  now works as expected. This bug was introduced in ksh 93r+ 2006-06-30.

2024-08-28:

- Fixed a crash that occurred for an arithmetic 'for' that has two instead of
  three ';'-separated expressions. The expected syntax error is now given.

2024-08-26:

- Fixed an infinite loop that occurred when a syntax error was thrown
  for an arithmetic 'for' loop on the interactive command line.

- [v1.1] Backported a change to '_' in types from the unreleased ksh 93v-
  beta. If a 'typeset -T' type declaration sets a discipline function for
  one of its subvariables (such as var.get() or var.getn()), then, within
  that discipline function, the automatic '_' nameref now refers to the type
  variable and no longer to the subvariable that the discipline function was
  set for. This means '_' now always refers to the type variable when used
  in a type declaration.

2024-08-22:

- Fixed: command lines containing certain specific kinds of syntax error
  were not entered into the shell's history for retrieval and correction.

2024-08-21:

- Fixed a corner-case crashing bug in shell discipline functions.

2024-08-19:

- Fixed a corner-case bug: for an empty set of positional parameters,
  "$@$@" would generate one empty field instead of zero fields like "$@".

2024-07-31:
